# FView-Power

./: CHANGELOG.md  README.md  README.zh.md  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
.github/workflows/: release.yml  update-download-links.yml
docs/: README.md  index.html
docs/css/: style.css
docs/js/: i18n.js
public/themes/: github.min.css
scripts/: gen-icon.mjs  release.sh  rewrite-theme-selectors.mjs  with-path.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: CodePreview.tsx  DocxPreview.tsx  DropZone.tsx  FolderTree.tsx  HelpModal.tsx  HtmlPreview.tsx  ImagePreview.tsx  MarkdownPreview.tsx  MarkdownView.tsx  PdfOutlineDrawer.tsx  PdfPreview.tsx  SearchBar.tsx  SettingsModal.tsx  Sidebar.tsx  Slot.tsx  TextPreview.tsx  ToastHost.tsx  TocSidebar.tsx  WysiwygToc.tsx
src/components/markdown/: MarkdownPreview.tsx
src/components/markdown/editor/: MarkdownEditor.tsx  SearchBar.tsx  useLexicalMarkdownEditor.tsx  useMilkdownEditor.ts  useSearch.ts
src/hooks/: useCommands.tsx  useFileLoader.ts  useFolder.ts  useI18n.tsx  usePlugin.tsx  useRecents.ts  useScrollSync.ts  useSearch.ts  useSelection.tsx  useSettings.tsx  useTheme.tsx
src/i18n/: translations.ts
src/plugins/: host.ts  registry.ts  types.ts
src/plugins/extensions/: index.ts
src/styles/: index.css
src/utils/: extractHeadings.ts  fileDetector.ts  platform.ts  rehypeSourceLine.ts  scanFolder.ts
(+18 files in other folders)
