[package]
name = "fview-power"
version = "0.7.0"
description = "FView Power — a minimal file preview & editor"
authors = ["you"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "fview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-cli = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[patch.crates-io]
brotli = { path = "vendor/brotli" }
